2010-03-31 Homer Xing <homer.xing@gmail.com>

    * Fix error when Ailurus is started by "ailurus --fast". Issue 209

2010-03-31 MA Yue <velly.empire@gmail.com>

    * Add icons for application menu shortcuts.
    * Improve the Eclipse installation function.
    * Install Eclipse from repository.
    * Improve Gnash in Fedora 

2010-03-30 Homer Xing <homer.xing@gmail.com>

    * Add more information in CommandFailError
    * We can launch partial functionality now. Our time is saved.
    * Fix bugs in "RPM recovery" pane.

2010-03-30 MA Yue <velly.empire@gmail.com>

    * Add an icon for "clean up" pane.

2010-03-30 Homer Xing <homer.xing@gmail.com>

    * Makes text shorter in "clean up" pane.
    * Fix folder size bug in "clean up" pane.

2010-03-29 Chen Yangyang <skabyy@gmail.com>

    * Add "clean up" pane:
      Add a feature to clean APT cache;
      Add a feature to clean Ailurus cache(/var/cache/ailurus);
      Add a feature to remove unused kernel.
    * Add "RPM recovery" pane.

2010-03-29 Homer Xing <homer.xing@gmail.com>

    * Do not terminate program when authentication fails.
    * Do not raise exception when GNOMEArtNG thumbnails cannot be downloaded.
    * Change SUN_JDK to OpenJDK.
    * Change VirtualBox to VirtualBox-ose.
    * Remove Dropbox.
    * Remove repositories which provides non-open-source software only.

2010-03-28 Homer Xing <homer.xing@gmail.com>

    * Check DBus status when program start up.

2010-03-27 Homer Xing <homer.xing@gmail.com>

    * Fix "Launch helper exited with error" issue.

2010-03-26 Homer Xing <homer.xing@gmail.com>

    * Fix "Songbird cannot be installed" issue.
    * Improve installation process.

2010-03-26 Starboy Qi <starboy.qi@gmail.com>

    * Improve functionality for setting login icon and start-here icon.

2010-03-26 MA Yue <velly.empire@gmail.com>

    * Show license for every software
    
2010-03-24 Homer Xing <homer.xing@gmail.com>

    * Remove Livna repository.
    * Remove ATrpms repository.