@@ -1,6 +1,7 @@
 2010-03-31 Homer Xing <homer.xing@gmail.com>
 
-    * Fix error when Ailurus is started by "ailurus --fast". Issue 209
+    * Fix error: Ailurus cannot be started if /sbin/sysctl failed.
+    * Fix error: Ailurus cannot be started if argv is "ailurus --fast". Issue 209
 
 2010-03-31 MA Yue <velly.empire@gmail.com>
 
